--- a/vignettes/Report.Rmd
+++ b/vignettes/Report.Rmd
@@ -1,7 +1,6 @@
 ---
-title: "Report-diffPrivML"
+title: "Report - diffPrivML"
 author: "Terence Tam, Yifan Gong"
-date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -9,12 +8,38 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Description
+## Description and problem statement
 
-Give some background info on $\epsilon$-differential private mechanism. 
+Machine learning algorithms collectively strive to extract population information and learn general patterns from data sets. The output of machine learning algorithms are generally trained models, where raw data points are distiled to far more compact forms that capture the essence of the origninal data. It is a type of summary aggregation in short that is no different than COUNT and SUM.  
 
-what does this package do? 
--precursor to standard mechanism with DF
+
+The release of these trained machine learning models, however, comes with a cost--individual data privacy. Oftentimes, machine learning models inadvertently give away information on *individual* data points used in the training data, even though these ML models are meant to release *population* information only.  
+
+
+To analyze and potentially solve this problem, one unified framework proposed by Cynthia Dwork's paper is the $\epsilon$-differential private mechanism. This is a model that quantifies the degrees of privacy loss for a given data release system, and a tolerance level as a parameter--$\epsilon$. A lot of theoretical research has been done on different ML models with regards to differential privacy, such as these research [here](https://arxiv.org/pdf/1412.7584.pdf), but not enough efforts are being done to apply these in practice.
+
+Therefore, we developed a R package, **diffPrivML**, that aims to put these differential private enhanced ML algorithms in the hands of data practitioners. Just like how a unified framework is developed to measure differential privacy, **diffPrivML** is a precursor in standarizing a library of ML algorithms and workflows that have differential privacy baked in.
+
+## Overview of package
+
+The **diffPrivML** package consists of a library of classifiers, each with differential privacy supported.
+
+* DPNaiveBayesClassifier 
+* DPRandomDecisionTreeClassifier
+* DPLogisticRegressionClassifier 
+
+For example, to fit a model of *DPNaiveBayesClassifier*, the privacy budget can be specified as part of the input.
+
+```{r, eval=FALSE}
+naiveBayesDP <- DPNaiveBayesClassifier(y = trainingSetY, x = trainingSetX, epsilon = 0.05)
+```
+One deviation from the original proposal to support a neural network based classifier is that it is not straightforward to ship a canned DF enhanced neural network classifier out of the box. Neural networks requires specific configurations to first construct the neural network (this is before any training is done), and the differential privacy parameters have to be customized as well based on the network constructed.
+
+## Motivating Example
+
+It is easy to visualize what kind of data loss a summary would leak in a database. It it not as easy to understand in a ML ouput model.
+
+Suppose we have build a decision tree like so.
 
 ## Use cases
 
@@ -26,18 +51,39 @@ First, let's invoke the library.
 
 ```{r}
 library(diffPrivML)
+library(caret)
 ```
 
-Then, let's use a dataset preloaded in the diffPrivML package.
-```{r}
+Then, let's use a dataset preloaded in the diffPrivML package. I picked health record as that is the quintessential example of data that are sensitive. 
+
+```{r, df_print: paged}
 data(BreastCancer)
 head(BreastCancer)
+```
+
+Running the decision tree classifier
+
+```{r}
+Y <- BreastCancer[, 11]
+X <- BreastCancer[, 2:10]
+
+trainingIndices <-createDataPartition(Y, p = 0.70, list = FALSE)
+trainingSetX <- X[trainingIndices, ]
+trainingSetY <- Y[trainingIndices]
+testSetX <- X[-trainingIndices, ]
+testSetY <- Y[-trainingIndices]
+
+rdtDP <- DPRandomDecisionTreeClassifier(Y = trainingSetY, X = trainingSetX,
+                                          height = 4, numTrees = 5)
+
+predictions <- predict(rdtDP, testSetX)
+accuracy <- sum(predictions == testSetY) / length(testSetY)
+accuracy
 ```
 
 ### Naive Bayes Classifier
 
 ```{r}
-library(caret)
 data(iris)
 y <- iris[, 5]
 x <- iris[, 1:4]
@@ -52,8 +98,37 @@ accuracy <- sum(predictions == testSetY) / length(testSetY)
 accuracy
 ```
 
-Add the ggplot for accuracy vs epsilon
+Add the ggplot for accuracy vs epsilon. TODO
+
+```{r}
+df <- data.frame(dose=c("D0.5", "D1", "D2"),
+                len=c(4.2, 10, 29.5))
+ggplot(data=df, aes(x=dose, y=len, group=1)) +
+  geom_line() +
+  geom_point() +
+  scale_size_area()
+```
 
 ## Contributions
+
+TODO
+
+## Future extensions
+
+This is the basis, can expand to unsupervised learning, and also support multiple methods of perturbation even in one type of classifier.
+
+Also, release the model with hyperparameter tuning.
+
+## References
+
+Zhanglong Ji, Zachary C Lipton, and Charles Elkan. “Differential privacy and machine learning:
+  A survey and review”. In: arXiv preprint arXiv:1412.7584 (2014).
+  
+Jaideep Vaidya, Basit Shafiq, Anirban Basu, and Yuan Hong. "Differentially
+  private naive Bayes classification." In Web Intelligence, pages 571–576, 2013.
+  
+Geetha Jagannathan, Krishnan Pillaipakkamnatt, and Rebecca N. Wright.
+  "A practical differentially private random decision tree classifier". In International
+  Conference on Data Mining Workshops, pages 114–121, 2009.
 
 
