--- a/vignettes/Report.Rmd
+++ b/vignettes/Report.Rmd
@@ -28,7 +28,7 @@ The **diffPrivML** package consists of a library of classifiers implemented as S
 * DPRandomDecisionTreeClassifier
 * DPLogisticRegressionClassifier 
 
-For example, to fit a model of **DPNaiveBayesClassifier**, the privacy budget can be specified as part of the input.
+For example, to fit a model of **DPNaiveBayesClassifier**, the privacy budget, epsilon, can be specified as part of the input.
 
 ```{r, eval=FALSE}
 naiveBayesDP <- DPNaiveBayesClassifier(y = trainingSetY, x = trainingSetX, epsilon = 0.05)
@@ -37,6 +37,8 @@ naiveBayesDP <- DPNaiveBayesClassifier(y = trainingSetY, x = trainingSetX, epsil
 The model is fitted with the training data input when the classifier object is instantiated.
 
 Each classifier also has its standard ML methods such as **summary()** and **predict()**.
+
+All the ML algorithms in this package so far uses output perturbation methods.  
 
 One slight deviation from the original project proposal to also support a neural network based classifier is that it is not straightforward to ship a canned DF enhanced neural network classifier out of the box. Neural networks can be higly customized to first construct the neural network configuration (this is before any training is done), and so the differential privacy parameters have to be customized as well based on the network constructed.
 
@@ -48,45 +50,66 @@ However, when it comes to the output of a machine learning model, it is not so s
 
 To be able to demonstrate this, I will use the **DPRandomDecisionTreeClassifier** in this package as a primer. The advantage of decision tree is that it can be served as a good visualization of the output space created by the model. 
 
-Suppose we have some synthetic data points like so
+Suppose we have some synthetic data set that looks like this
 
 ```{r}
-A <- c('0','1')
-B <- c('1','0')
-class <- c("Y","N")
+A <- c('0','1','1')
+B <- c('1','0','0')
+class <- c("Y","N","N")
 syntheticData <- as.data.frame(cbind(A, B, class))
 head(syntheticData)
 ```
 
-A and B are predictors and class is the label of the data points. This is an extreme case where the whole dataset only have two data points, and knowing the output of the classifier would definitely leads to privacy loss.
+A and B are predictors and class is the label for the data points. This is an extreme case where the whole training dataset only have three data points. Notice how the data points are very orthogonal and mutually exclusive, where class == 'Y' only when B == '1'. Therefore, in this toy example, knowing exactly the output of the classifier would definitely give inference on what data points are used in the training set, leading to privacy loss.
+
+Suppose we run a non-private random decision tree classifier with the three data points as input like so.
 
 ```{r}
 library(diffPrivML)
-set.seed(777)
+set.seed(50) #for reproducibility
 rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[,3], X = syntheticData[,1:2], height = 2, numTrees = 1)
+```
+
+When epsilon is not specified in our DP classifier, that will default to non-private algorithm (in a sense, that means epsilon is infinite). Also here, explicitly setting numTree = 1 so we only have 1 tree in our classifer for sake of discussion.
+
+The generated decision tree is below.
+```{r}
 rdtDP$trees[[1]]$printTree()
 ```
-```{r}
-experiment <- function(){
-  rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[,3], X = syntheticData[,1:2], height = 2, numTrees = 1)
-  predictions <- predict(rdtDP, syntheticData[,1:2])
-  accuracy <- sum(predictions == syntheticData[,3]) / length(syntheticData[,3])
-  accuracy
-}
-hist(replicate(100, experiment()))
-```
 
-And now with a stricter differential privacy budget
+Note the RDT tree is unpruned. Now suppose we train the classifer 100 times, it is with certainty that with the data point, the predicted output is the same.
 
 ```{r}
 experiment <- function(){
-  rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[,3], X = syntheticData[,1:2], height = 2, numTrees = 1, epsilon = 0.005)
-  predictions <- predict(rdtDP, syntheticData[,1:2])
-  accuracy <- sum(predictions == syntheticData[,3]) / length(syntheticData[,3])
-  accuracy
+  rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[,3], X = syntheticData[,1:2], height = 2, numTrees = 1,)
+  predict(rdtDP, syntheticData[1,1:2])
 }
-hist(replicate(100, experiment()))
+table(replicate(100, experiment()))
 ```
+
+Now let's suppose we are limiting privacy budget, and then try compare the two models.
+
+With data point
+
+```{r}
+experiment <- function(){
+  rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[,3], X = syntheticData[,1:2], height = 2, numTrees = 1, , epsilon = 0.005)
+  predict(rdtDP, syntheticData[1,1:2])
+}
+table(replicate(100, experiment()))
+```
+
+Without data point
+
+```{r}
+experiment <- function(){
+  rdtDP <- DPRandomDecisionTreeClassifier(Y = syntheticData[-1,3], X = syntheticData[-1,1:2], height = 2, numTrees = 1, epsilon = 0.005)
+  predict(rdtDP, syntheticData[1,1:2])
+}
+table(replicate(100, experiment()))
+```
+
+So the two models become more "alike" and the adversary can't guess which dataset is actually used for each output.
 
 ## Use cases
 
@@ -102,7 +125,7 @@ library(caret)
 
 Then, let's use a health dataset, **BreastCancer**, preloaded in the diffPrivML package. I picked health record as that is the quintessential example of data that are sensitive. 
 
-```{r, df_print: paged}
+```{r}
 data(BreastCancer)
 head(BreastCancer)
 ```
@@ -127,10 +150,33 @@ accuracy <- sum(predictions == testSetY) / length(testSetY)
 paste("The test set accuracy rate is", accuracy * 100, "%")
 ```
 
-Again, end user can tweak parameters like depth of trees and number of trees in ensembles to boost the model performance.
+Again, end user can tweak parameters like depth of trees and number of trees in ensembles to boost the model performance. 
+
+Note this is only supported for categorical data. DPNaiveBayesClassifier, on the other hand, support for mixed categorical / numerical attributes.
+
+Performance
+
+```{r}
+eps <- c(5, 1, 0.7, 0.4, 0.01, 0.0002)
+
+accuracy <- sapply(eps, function(epsilon) {
+  rdtDP <- DPRandomDecisionTreeClassifier(Y = trainingSetY, X = trainingSetX, height = 3, numTrees = 6)
+  predictions <- predict(rdtDP, testSetX)
+  sum(predictions == testSetY) * 100 / length(testSetY)
+})
+
+df <- data.frame(epsilon = eps,
+                accuracy = accuracy)
+ggplot(data=df, aes(x=epsilon, y=accuracy, group=1)) +
+  geom_line() +
+  geom_point() +
+  scale_size_area()
+```
+
 
 ### Naive Bayes Classifier
 
+Just like before, grab a dataset and split it to test and training set like so.
 ```{r}
 data(iris)
 y <- iris[, 5]
@@ -140,18 +186,37 @@ trainingSetX <- x[trainingIndices, ]
 trainingSetY <- y[trainingIndices]
 testSetX <- x[-trainingIndices, ]
 testSetY <- y[-trainingIndices]
-naiveBayesDP <- DPNaiveBayesClassifier(trainingSetY, trainingSetX)
-predictions <- predict(naiveBayesDP, testSetX)
-accuracy <- sum(predictions == testSetY) / length(testSetY)
-accuracy
+
 ```
 
-Add the ggplot for accuracy vs epsilon. TODO
+Then invoke the **DPNaiveBayesClassifier**, and also get the summary of the model fitted.
 
 ```{r}
-df <- data.frame(dose=c("D0.5", "D1", "D2"),
-                len=c(4.2, 10, 29.5))
-ggplot(data=df, aes(x=dose, y=len, group=1)) +
+naiveBayesDP <- DPNaiveBayesClassifier(trainingSetY, trainingSetX, epsilon = 0.7)
+#summary(naiveBayesDP)
+```
+Then try to predict the test data set like so.
+
+```{r}
+predictions <- predict(naiveBayesDP, testSetX)
+accuracy <- sum(predictions == testSetY) / length(testSetY)
+paste("The test set accuracy rate is", accuracy * 100, "%")
+```
+
+Trying on different epsilons.
+
+```{r}
+eps <- c(1, 0.7, 0.4, 0.1, 0.05)
+
+accuracy <- sapply(eps, function(epsilon) {
+  naiveBayesDP <- DPNaiveBayesClassifier(trainingSetY, trainingSetX, epsilon = epsilon)
+  predictions <- predict(naiveBayesDP, testSetX)
+  sum(predictions == testSetY) * 100 / length(testSetY)
+})
+
+df <- data.frame(epsilon = eps,
+                accuracy = accuracy)
+ggplot(data=df, aes(x=epsilon, y=accuracy, group=1)) +
   geom_line() +
   geom_point() +
   scale_size_area()
