--- a/vignettes/Report.Rmd
+++ b/vignettes/Report.Rmd
@@ -180,7 +180,7 @@ ggplot(data=df, aes(x=epsilon, y=accuracy, group=1)) +
 
 ### Naive Bayes Classifier
 
-Just like before, grab a dataset and split it to test and training set like so.
+Just like the previous classifier, the same is true for **DPNaiveBayesClassifier** where a dataset is used as input.
 ```{r}
 data(iris)
 y <- iris[, 5]
@@ -232,9 +232,11 @@ TODO
 
 ## Future extensions
 
-This is the basis, can expand to unsupervised learning, and also support multiple methods of perturbation even in one type of classifier.
+So far, our package deals specifically with privatizing training data in the machine learning workflow. Oftentimes, machine learning algorithms have yet another set of data (the hold out set or validation set) for hyperparameter tuning and cross validations. These data also influence the final model output and so requires another set of privatization procedure to enforce differential privacy.
 
-Also, release the model with hyperparameter tuning.
+Again, **diffPrivML** serves as a precursor in standardizing a library of ML algorithms and workflows that have differential privacy baked in. Classification and output perturbations are just starting points. The package can naturally be extended to unsupervised learning as well as other perturbation methods (input and objective perturbations).
+
+Thank you!
 
 ## References
 
